--- a/index.html
+++ b/index.html
@@ -112,11 +112,11 @@
 			<h3 class="title">Work Experience</h3>
 			<div class="work-info">
 				<div class="col-md-6 work-left">
-					<h4>Oct'2018 - Mar'2019 </h4>
+					<h4>Oct'2020 - Dec'2020 </h4>
 				</div>
 				<div class="col-md-6 work-right">
-					<h5><span class="glyphicon glyphicon-briefcase"> </span> Vega Derivative Solutions Pvt Ltd </h5>
-					<p>Worked with Vega Derivative Solutions Pvt Ltd  for 6 months as a Java developer</p>
+					<h5><span class="glyphicon glyphicon-briefcase"> </span>Edureka</h5>
+					<p>I Completed Edureka's Full Stack Web Development Internship Program. In this program, I created a website like zomato from scratch. I worked on HTML,CSS,Javascript,React Js to bulid the Frontend and Node js ,Express Js ,MongoDB to bulid the backend.I got the title of "Edureka Super Intern" for being one of the best performers in the internship program</p>
 				</div>
 				<div class="clearfix"> </div>
 			</div>
@@ -124,11 +124,11 @@
 
 			<div class="work-info">
 				<div class="col-md-6 work-left">
-					<h4>Oct'2020 - Dec'2020 </h4>
+					<h4>Oct'2018 - Mar'2019 </h4>
 				</div>
 				<div class="col-md-6 work-right">
-					<h5><span class="glyphicon glyphicon-briefcase"> </span> Edureka </h5>
-					<p>I Completed Edureka's Full Stack Web Development Internship Program. In this program, I created a website like zomato from scratch. I worked on HTML,CSS,Javascript,React Js to bulid the Frontend and Node js ,Express Js ,MongoDB to bulid the backend.I got the title of "Edureka Super Intern" for being one of the best performers in the internship program</p>
+					<h5><span class="glyphicon glyphicon-briefcase"> </span> Vega Derivative Solutions Pvt Ltd </h5>
+					<p>Worked with Vega Derivative Solutions Pvt Ltd  for 6 months as a Java developer</p>
 				</div>
 				<div class="clearfix"> </div>
 			</div>
@@ -255,62 +255,119 @@
 								<div class="col-md-4 portfolio-grids">
 									<div class="grid">
 										<a href="images/ProjectTitle.png" class="swipebox"
-											title="This Website Same Look Like Zomato ">
+											title="I develop this application from scratch help by edureka full stack web development internship program" >
 											<img src="images/ProjectTitle.png" alt="" class="img-responsive" />
 											<div class="figcaption">
-												<h3><span> Zomato Clone </span></h3>
-												<p> Products </p>
+												<h3><span> Zomato Clone Application </span><a href="https://zomoto-clone.herokuapp.com/" target="_blank">Click Here</a></h3>
+												<p>  I Develop Zomato Like Application from scratch in Edureka Internship</p>
+												
 											</div>
+											
 										</a>
 									</div>
 								</div>
-								<div class="clearfix"> </div>
-							</div>
-						</div>
-						<div class="tab-1 resp-tab-content">
-							<div class="tab_img">
 								<div class="col-md-4 portfolio-grids">
-									<div class="grid">
-										<a href="images/ProjectTitle.png" class="swipebox"
-											title="This Website Same Look Like Zomato">
-											<img src="images/ProjectTitle.png" alt="" class="img-responsive" />
-											<div class="figcaption">
-												<h3><span> Zomato Clone </span></h3>
-												<p> Products </p>
-											</div>
-										</a>
-									</div>
-								</div>
-								<div class="clearfix"> </div>
-							</div>
-						</div>
-						<div class="tab-1 resp-tab-content">
-							<div class="tab_img">
-								<div class="col-md-4 portfolio-grids">
-									<div class="grid">
-										<a href="images/ProjectTitle.png" class="swipebox"
-											title="This Website Same Look Like Zomato " >
-											<img src="images/ProjectTitle.png" alt="" class="img-responsive" />
-											<div class="figcaption">
-												<h3><span> Zomato Clone </span></h3>
-												<p> Products </p>
-											</div>
-										</a>
-									</div>
-								</div>
-								<div class="clearfix"> </div>
-							</div>
-						</div>
-						<div class="tab-1 resp-tab-content">
-							<div class="tab_img">
-								<div class="col-md-4 portfolio-grids">
-									<div class="grid">
-										<a href="images/g1.jpg" class="swipebox"
+									<div class="grid effect-sarah">
+										<a href="images/j2.jpg" class="swipebox"
 											title="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis maximus tortor diam, ac lobortis justo rutrum quis. Praesent non purus fermentum, eleifend velit non">
-											<img src="images/g1.jpg" alt="" class="img-responsive" />
+											<img src="images/j2.jpg" alt="" class="img-responsive" />
 											<div class="figcaption">
-												<h3><span> Accenture Planning and Control Tool </span></h3>
+												<h3><span> Accenture Reconciliation Tool </span></h3>
 												<p> Banking and Finance </p>
+											</div>
+										</a>
+									</div>
+								</div>
+								<div class="col-md-4 portfolio-grids">
+									<div class="grid">
+										<a href="images/j3.jpg" class="swipebox"
+											title="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis maximus tortor diam, ac lobortis justo rutrum quis. Praesent non purus fermentum, eleifend velit non">
+											<img src="images/j3.jpg" alt="" class="img-responsive" />
+											<div class="figcaption">
+												<h3><span> Uber Eats </span></h3>
+												<p> Products </p>
+											</div>
+										</a>
+									</div>
+								</div>
+								<div class="col-md-4 portfolio-grids">
+									<div class="grid">
+										<a href="images/j4.jpg" class="swipebox"
+											title="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis maximus tortor diam, ac lobortis justo rutrum quis. Praesent non purus fermentum, eleifend velit non">
+											<img src="images/j4.jpg" alt="" class="img-responsive" />
+											<div class="figcaption">
+												<h3><span> American Express Chatbot </span></h3>
+												<p> Finance </p>
+											</div>
+										</a>
+									</div>
+								</div>
+								<div class="col-md-4 portfolio-grids">
+									<div class="grid">
+										<a href="images/j5.jpg" class="swipebox"
+											title="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis maximus tortor diam, ac lobortis justo rutrum quis. Praesent non purus fermentum, eleifend velit non">
+											<img src="images/j5.jpg" alt="" class="img-responsive" />
+											<div class="figcaption">
+												<h3><span> Zomato Clone </span></h3>
+												<p> Products </p>
+											</div>
+										</a>
+									</div>
+								</div>
+								<div class="clearfix"> </div>
+							</div>
+						</div>
+						<div class="tab-1 resp-tab-content">
+							<div class="tab_img">
+								<div class="col-md-4 portfolio-grids">
+									<div class="grid">
+										<a href="images/ProjectTitle.png" class="swipebox"
+											title="I develop this application from scratch help by edureka full stack web development internship program">
+											<img src="images/ProjectTitle.png" alt="" class="img-responsive" />
+											<div class="figcaption">
+												<h3><span> Zomato Clone Application <a href="https://zomoto-clone.herokuapp.com/" target="_blank">Click Here</a>  </span></h3>
+												<p> I Develop Zomato Application FrontEnd Using React </p>
+											</div>
+										</a>
+									</div>
+								</div>
+								<div class="col-md-4 portfolio-grids">
+									<div class="grid">
+										<a href="images/j4.jpg" class="swipebox"
+											title="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis maximus tortor diam, ac lobortis justo rutrum quis. Praesent non purus fermentum, eleifend velit non">
+											<img src="images/j4.jpg" alt="" class="img-responsive" />
+											<div class="figcaption">
+												<h3><span> American Express Chatbot </span></h3>
+												<p> Finance </p>
+											</div>
+										</a>
+									</div>
+								</div>
+								<div class="col-md-4 portfolio-grids">
+									<div class="grid">
+										<a href="images/j5.jpg" class="swipebox"
+											title="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis maximus tortor diam, ac lobortis justo rutrum quis. Praesent non purus fermentum, eleifend velit non">
+											<img src="images/j5.jpg" alt="" class="img-responsive" />
+											<div class="figcaption">
+												<h3><span> Zomato Clone </span></h3>
+												<p> Products </p>
+											</div>
+										</a>
+									</div>
+								</div>
+								<div class="clearfix"> </div>
+							</div>
+						</div>
+						<div class="tab-1 resp-tab-content">
+							<div class="tab_img">
+								<div class="col-md-4 portfolio-grids">
+									<div class="grid">
+										<a href="images/ProjectTitle.png" class="swipebox"
+											title="I develop this application from scratch help by edureka full stack web development internship program">
+											<img src="images/ProjectTitle.png" alt="" class="img-responsive" />
+											<div class="figcaption">
+												<h3><span> Zomato Clone </span> <a href="https://zomoto-clone.herokuapp.com/" target="_blank">Click Here</a></h3>
+												<p> I Develop Zomato Application Backend Using Node js and Express </p>
 											</div>
 										</a>
 									</div>
